--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_historial.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_historial.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1ef4d0a4-db8a-4cc6-81ad-b4ec81f2231d">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="41"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="42"/>
 	<parameter name="FECHAINICIO" class="java.lang.String"/>
 	<parameter name="CODIGO" class="java.lang.String"/>
 	<parameter name="FECHAFIN" class="java.lang.String">
@@ -11,8 +11,11 @@
 	<parameter name="USUARIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT e.codigoempleado, concat(e.nombreempleado, ' ',e.apellidoempleado) as Empleado,d.nombrepuesto, d.sueldobase, d.sueldotopepuesto, DATE_FORMAT(d.fechacontrataciondesde, '%d/%m/%Y') AS Desde,DATE_FORMAT( d.fechacontratacionhasta, '%d/%m/%Y')as Hasta
+		<![CDATA[SELECT e.codigoempleado, concat(e.nombreempleado,' ',e.apellidoempleado)as Empleado,d.nombrepuesto, d.sueldobase, d.sueldotopepuesto, DATE_FORMAT(d.fechacontrataciondesde, '%d/%m/%Y') as Desde,DATE_FORMAT(d.fechacontratacionhasta, '%d/%m/%Y')as Hasta 
 FROM empleado e INNER JOIN empleadopuesto p
 on e.codigoempleado=p.codigoempleado  inner join puesto d on d.codigopuesto=p.codigopuesto
 where
@@ -159,12 +162,12 @@ e.codigoempleado=$P{CODIGO}]]>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<image>
-				<reportElement x="675" y="9" width="105" height="86" uuid="0a53ebdf-f527-4f3d-a4d9-5ebcd1482402"/>
-				<imageExpression><![CDATA["../../resources/static/image/GOES.jpg"]]></imageExpression>
+				<reportElement x="615" y="0" width="105" height="86" uuid="2e6469f8-63c6-4047-a732-8318b13ccf9f"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="21" y="9" width="105" height="86" uuid="00dcc53f-b5c6-4f41-bd93-d625f80b347c"/>
-				<imageExpression><![CDATA["../../resources/static/image/LOGOMJ.jpg"]]></imageExpression>
+				<reportElement x="20" y="17" width="105" height="86" uuid="63395dac-30f9-4fa7-8988-9d589797cf45"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
 			</image>
 		</band>
 	</pageHeader>
@@ -256,22 +259,22 @@ e.codigoempleado=$P{CODIGO}]]>
 				<textFieldExpression><![CDATA[$F{sueldotopepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="15" y="0" width="100" height="14" uuid="d2840909-1665-4e86-8537-e9a1557d482d"/>
+				<reportElement x="2" y="0" width="145" height="14" uuid="9e4e586d-f374-4b95-a60c-30d9ad8649a6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Empleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="540" y="0" width="100" height="14" uuid="047aa3a6-8cd2-42cc-a7aa-874288256460"/>
-				<textElement>
+				<reportElement x="532" y="2" width="83" height="14" uuid="4c1aa081-c9f8-4f96-bbcc-1a8f112d3843"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Desde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="697" y="0" width="100" height="14" uuid="09d501bf-37c4-4183-9d82-36a64abd5202"/>
-				<textElement>
+				<reportElement x="671" y="2" width="95" height="14" uuid="cd711d20-f0ce-425f-aca0-04e81d895903"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Hasta}]]></textFieldExpression>
