--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_contrataciones.jrxml
@@ -9,8 +9,8 @@
 	<parameter name="IMAGE_PATH" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<queryString language="SQL">
-		<![CDATA[SELECT e.codigoempleado,e.nombreempleado,e.apellidoempleado,p.nombrepuesto,p.ubicacionpuesto,c.fechainiciocontrato,c.salarioactual FROM `empleado` e, puesto p, contrato c where e.codigoempleado=c.codigoempleado and e.codigopuesto=p.codigopuesto]]>
+	<queryString>
+		<![CDATA[SELECT e.codigoempleado,e.nombreempleado,e.apellidoempleado,p.nombrepuesto,p.ubicacionpuesto,DATE_FORMAT(c.fechainiciocontrato, "%d/ %m /%Y") as 'fechainiciocontrato',c.salarioactual FROM `empleado` e, puesto p, contrato c where e.codigoempleado=c.codigoempleado and e.codigopuesto=p.codigopuesto]]>
 	</queryString>
 	<field name="codigoempleado" class="java.lang.Integer">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -27,7 +27,7 @@
 	<field name="ubicacionpuesto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="fechainiciocontrato" class="java.sql.Date">
+	<field name="fechainiciocontrato" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="salarioactual" class="java.lang.Float">
@@ -60,8 +60,8 @@
 				<text><![CDATA[DIRECCION DE RECURSOS HUMANOS]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="418" y="80" width="57" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
-				<textElement>
+				<reportElement x="455" y="80" width="74" height="20" uuid="d2d48d07-0968-466b-9432-3d8f5229d0b4"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
@@ -74,21 +74,21 @@
 				<text><![CDATA[REPORTE DE NUEVAS CONTRATACIONES]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="477" y="80" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
+				<reportElement x="529" y="80" width="26" height="20" uuid="fa7f683f-2195-46cb-80b3-ea989af1ee81"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="418" y="60" width="105" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
+				<reportElement x="409" y="60" width="114" height="20" uuid="8cae14a6-c433-461f-a07b-c8abf6c60049"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<text><![CDATA[Fecha de Generacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="418" y="98" width="37" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
+				<reportElement x="416" y="98" width="39" height="20" uuid="8db62085-9fe6-4b69-b055-d239c583ecf5"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -102,7 +102,7 @@
 				<text><![CDATA[Hasta:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="316" y="100" width="92" height="20" uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8"/>
+				<reportElement x="316" y="100" width="100" height="20" uuid="4d3e6229-3bd2-4216-b109-467a1c5008f8"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -169,7 +169,7 @@
 				<text><![CDATA[Codigo Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Transparent" x="79" y="12" width="148" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
+				<reportElement mode="Transparent" x="79" y="12" width="158" height="20" forecolor="#000000" backcolor="#E6E6E6" uuid="e4e66651-0c88-4063-a2c0-741ac227aa51"/>
 				<textElement textAlignment="Center">
 					<font fontName="Times New Roman" size="9" isBold="true"/>
 				</textElement>
@@ -207,9 +207,6 @@
 				<reportElement x="79" y="4" width="1" height="27" uuid="b737e0fa-3a60-40c8-bb90-14263068fda4"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement x="157" y="4" width="1" height="1" uuid="81556b22-5476-455b-a573-55b1eee64f71"/>
-			</line>
-			<line direction="BottomUp">
 				<reportElement x="237" y="4" width="1" height="27" uuid="e9f2514f-8bf2-42ed-bc54-b56ff74588ce"/>
 			</line>
 			<line direction="BottomUp">
@@ -224,7 +221,7 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="21">
+		<band height="22">
 			<textField isStretchWithOverflow="true">
 				<reportElement x="0" y="0" width="54" height="20" uuid="1e6acfee-6c20-4362-bd70-58ef802e549b"/>
 				<textElement>
@@ -280,30 +277,13 @@
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="59">
+		<band height="17">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="12" width="277" height="13" backcolor="#FFFFFF" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
-				<textElement>
-					<font fontName="Times New Roman" isUnderline="false"/>
+				<reportElement mode="Opaque" x="0" y="4" width="555" height="13" backcolor="#FFFFFF" uuid="78a322f0-77a1-4642-be64-b9f31d5d90d3"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
-			</textField>
-			<line>
-				<reportElement x="1" y="8" width="548" height="1" uuid="ed8e9bcf-b26f-42d1-a54e-d91b5ac6427e"/>
-			</line>
-			<textField>
-				<reportElement x="429" y="9" width="74" height="20" uuid="d55661fa-f4cb-42ee-a4e5-411d7d279ea2"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="503" y="9" width="26" height="20" uuid="1f2a4478-a8d5-4319-a004-c25b9acc56ba"/>
-				<textElement>
-					<font fontName="Times New Roman"/>
-				</textElement>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
