--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_indemnizado.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_indemnizado.jrxml
@@ -11,9 +11,13 @@
 	</parameter>
 	<queryString>
 		<![CDATA[SELECT 
- e.nombreempleado, e.apellidoempleado,e.sexoempleado,p.acuerdo as "No Acuerdo",p.sueldobase as 'Salario',p.fechacontrataciondesde as "Fecha Desde", p.fechacontratacionhasta as "Fecha Hasta",p.nombrepuesto,p.ubicacionpuesto
+ e.nombreempleado, e.apellidoempleado,e.sexoempleado,p.acuerdo as
+ "No Acuerdo",p.sueldobase as 'Salario',
+ DATE_FORMAT(p.fechacontrataciondesde, "%d/ %m /%Y") as "Fecha Desde", 
+ DATE_FORMAT(p.fechacontratacionhasta, "%d/ %m /%Y") as "Fecha Hasta",
+ p.nombrepuesto,p.ubicacionpuesto
 FROM `empleado` e, puesto p 
-WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=2]]>
+WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=1]]>
 	</queryString>
 	<field name="nombreempleado" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -26,8 +30,8 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=2]]>
 	</field>
 	<field name="No Acuerdo" class="java.lang.Integer"/>
 	<field name="Salario" class="java.lang.Float"/>
-	<field name="Fecha Desde" class="java.sql.Date"/>
-	<field name="Fecha Hasta" class="java.sql.Date"/>
+	<field name="Fecha Desde" class="java.lang.String"/>
+	<field name="Fecha Hasta" class="java.lang.String"/>
 	<field name="nombrepuesto" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -40,8 +44,8 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=2]]>
 	<title>
 		<band height="141">
 			<textField>
-				<reportElement x="649" y="99" width="65" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
-				<textElement>
+				<reportElement x="702" y="99" width="74" height="20" uuid="9b4c84c3-5c3c-43be-819c-a5f1e3e55e6e"/>
+				<textElement textAlignment="Right">
 					<font fontName="Times New Roman"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
@@ -82,7 +86,7 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=2]]>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="714" y="99" width="26" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
+				<reportElement x="776" y="99" width="26" height="20" uuid="4d9820b0-a2b1-4c67-85af-30c2220d992c"/>
 				<textElement>
 					<font fontName="Times New Roman"/>
 				</textElement>
@@ -232,7 +236,10 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=2]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="25">
+		<band height="22">
+			<line>
+				<reportElement positionType="FixRelativeToBottom" x="0" y="19" width="802" height="1" uuid="11a87019-9304-4670-93b2-1c3b1e6d2975"/>
+			</line>
 			<textField isStretchWithOverflow="true">
 				<reportElement mode="Transparent" x="0" y="0" width="59" height="20" uuid="e7fac09e-4c31-4110-9335-4a4961e91287"/>
 				<textElement textAlignment="Center">
@@ -302,38 +309,14 @@ WHERE e.codigopuesto=p.codigopuesto and e.estadoempleado=2]]>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="56">
+		<band height="17">
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="0" y="14" width="330" height="13" backcolor="#FFFFFF" uuid="8278bb72-e371-4833-9b28-f319cc275709"/>
-				<textElement>
-					<font fontName="Times New Roman" isUnderline="false"/>
+				<reportElement mode="Opaque" x="0" y="4" width="802" height="13" backcolor="#FFFFFF" uuid="8278bb72-e371-4833-9b28-f319cc275709"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:" + $V{COLUMN_COUNT}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="13" width="802" height="1" uuid="11a87019-9304-4670-93b2-1c3b1e6d2975"/>
-			</line>
-			<textField>
-				<reportElement x="702" y="14" width="74" height="20" uuid="914a277b-bad0-41f0-b595-a00e1173318d"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Pàgina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
-			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="776" y="14" width="26" height="20" uuid="c133fdfa-2067-4c0d-9a2b-b864af4cf9d6"/>
-				<textElement>
-					<font fontName="Times New Roman"/>
-				</textElement>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="330" y="36" width="189" height="20" uuid="3c547e3b-818f-4bd0-a8d9-773eeb1fddac"/>
-				<textElement textAlignment="Center">
-					<font fontName="Times New Roman" size="9"/>
-				</textElement>
-				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
-			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
