onditas de algunos combox de report

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -58,7 +58,8 @@
                                     <!--<li><a href="#" th:href="@{/cuadrodirectivos/buscar/}">Buscar Cuadros directivos</a></li>-->
                                     <li><a href="#" th:href="@{/cuadrodirectivos/new/cuadrodirectivo}">Crear Cuadros Directivos</a></li>
                                     <li><a href="#" th:href="@{/cuadrodirectivos/}">Gestionar Cuadros Directivos</a></li>
-                                    <li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivos</a></li>
+                                    <li><a href="#" th:href="@{/otherreports/exoneradoreporte/}">Reporte de Personal Exonerado <br>de Marcacion</a></li>
+                                    <!--<li><a href="#" th:href="@{/cuadrodirectivos/report/}">Reporte de Cuadro Directivos</a></li>-->
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -69,7 +70,8 @@
                                     <li><a href="#" th:href="@{/capacitaciones/}">Gestionar Capacitaciones</a></li>
                                      <li><a href="#" th:href="@{/empleadocapacitaciones/new/empleadocapacitacion}">Asignar capacitaciones a empleados</a></li>
                                     <li><a href="#" th:href="@{/empleadocapacitaciones/}">Consultar Capacitaciones Asignadas</a></li>
-                                    <li><a href="#" th:href="@{/capacitaciones/report/}">Reporte de Capacitaciones</a></li>
+                                    <!--<li><a href="#" th:href="@{/capacitaciones/report/}">Reporte de Capacitaciones</a></li>-->
+                                                                   <li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
                                 </ul>
                             </li>
 
@@ -86,6 +88,7 @@
                                     <!--<li><a href="#" th:href="@{/capacitadores/buscar/}">Buscar Capacitador</a></li>-->
                                      <li><a href="#" th:href="@{/capacitadores/new/capacitador}">Crear Capacitadores</a></li>
                                     <li><a href="#" th:href="@{/capacitadores/}">Gestionar Capacitadores</a></li>
+                                      <li><a href="#" th:href="@{/otherreports/capacitadores/}">Reporte Capacitador</a></li>
                                     <!--<li><a href="#" th:href="@{/capacitadores/report/}">Reporte Capacitador</a></li>-->
                                 </ul>
                             </li>
@@ -98,6 +101,7 @@
                                                  <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/costocapacitaciones/}">Gestionar Costo Capacitaciones</a></li>
                                     <li><a href="#" th:href="@{/costocapacitaciones/report/}">Reporte de costo de capacitaciones</a></li>
+                                    
                                 </ul>
                             </li>
 <!--                            <li class="dropdown">
@@ -145,7 +149,8 @@
                                        <li><a href="#" th:href="@{/comites/new/comite}">Crear comites</a></li>
                                     <li><a href="#" th:href="@{/comites/}">Gestionar comites</a></li>
                                     <!--<li><a href="#" th:href="@{/comites/buscar/}">Buscar Comites</a></li>-->
-                                    <li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>
+                                    <!--<li><a href="#" th:href="@{/comites/report/}">Reporte comites</a></li>-->
+                                     <li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
