--- a/src/main/resources/templates/fragments/estado/estadoshow.html
+++ b/src/main/resources/templates/fragments/estado/estadoshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
 
-        <title>SISADMRH-Detalle de costos de capacitacion</title>
+        <title>Detalle de Elementos</title>
     <th:block th:include="../templates/header"></th:block>
 
 
@@ -14,7 +14,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Costos de Capacitaciones</h3>
+            <h3 align="center">Consulta de Elementos</h3>
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
