--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Crear Estado</title>
+    <title>Crear Elementos</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
