--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -225,10 +225,10 @@
                           
 
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Estados<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Elementos<span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
                                 <ul class="dropdown-menu forAnimate" role="menu">
-                                      <li><a href="#" th:href="@{/estados/new/estado}">Crear Estados</a></li>
-                                    <li><a href="#" th:href="@{/estados/}">Gestionar  Estados</a></li>
+                                      <li><a href="#" th:href="@{/estados/new/estado}">Crear Elementos</a></li>
+                                    <li><a href="#" th:href="@{/estados/}">Gestionar  Elementos</a></li>
                                   
                                 </ul>
                             </li>
