--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_nivelesescolares.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_nivelesescolares.jrxml
@@ -23,7 +23,7 @@
  nivelescolaridad n , 
  puesto p 
  WHERE 
-e.codigopuesto=p.codigopuesto and e.estadoempleado=1 AND
+e.codigopuesto=p.codigopuesto and 
 e.codigoempleado=en.codigoempleado and
 n.codigonivelnivelescolaridad=en.codigonivelnivelescolaridad]]>
 	</queryString>
